<resources>
    <string name="app_name">Gelir Gider Takibi</string>
    <string name="harcama_ozet">Harcama Özet</string>
    <string name="harcama_ekle">Harcama Ekle</string>
    <string name="ozet">Özet</string>
    <string name="gelir_ekle">Gelir Ekle</string>
    <string name="rapor">Rapor</string>
    <string name="giderlerim">Giderlerim</string>
    <string name="gelirlerim">Gelirlerim</string>
    <string name="gelir">Gelir</string>
    <string name="gider">Gider</string>
    <string name="net">Net</string>
    <string name="eksi_bakiye">\u002D %1$s</string>
    <string name="arti_bakiye">\u002B %1$s</string>
    <string name="harcama_yuzde">%%%1$s</string>
    <string name="market">Market</string>
    <string name="yemek">Yemek</string>
    <string name="kiyafet">Kıyafet</string>
    <string name="yol">Yol</string>
    <string name="ziynet">Ziynet</string>
    <string name="kredi">Kredi</string>
    <string name="borsa">Borsa</string>
    <string name="espor">E-spor</string>
    <string name="okul">Okul</string>
    <string name="cocuk">Çocuk Bakım</string>
    <string name="seyahat">Seyahat</string>
    <string name="gelir_tipi">Gelir Tipi</string>
    <string name="harcama_tipi">Harcama Tipi</string>
    <string name="aktif_gelir">Aktif Gelir</string>
    <string name="pasif_gelir">Pasif Gelir</string>
    <string name="ad">Ad</string>
    <string name="miktar">Miktar</string>
    <string name="temizle">Temizle</string>
    <string name="ekle">Ekle</string>
    <string name="duzenli_islem">Düzenli işlem</string>
    <string name="aciklama">Açıklama</string>
    <string name="kategori">Kategori</string>
    <string name="isimsiz">İsimsiz</string>
    <string name="isimsiz_harcama">İsimsiz Harcama</string>
    <string name="isimsiz_gelir">İsimsiz Gelir</string>
    <string name="evet">Evet</string>
    <string name="hayir">Hayır</string>
    <string name="duzenli_islem_goster">Düzenli İşlemleri Göster</string>
    <string name="tamam">Tamam</string>
    <string name="sil_tite">Silme İşlemi</string>
    <string name="sil_message">%1$s\'ı silmek istediğinden emin misin?</string>
    <string name="ara">ara</string>
    <string name="iptal">İptal</string>
    <string name="filtrele">Filtrele</string>
    <string name="filtre_kaldır">Filtre Kaldır</string>
    <string name="sil">sil</string>
    <string name="kaydet">kaydet</string>
    <string name="tekrar_suresi">Tekrar Süresi</string>
    <string name="eklenme_zamani">Eklenme Zamanı</string>
    <string name="yinele">Yinele</string>
    <string name="tarih_sec">Tarih Seç</string>
    <string name="miktar_bos_olamaz">Miktar Boş Olamaz</string>
    <string name="ad_bos_uyari">Ad bilgisi boş</string>
    <string name="gg_aa_yyyy_text">GG/AA/YYYY</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="yeni_kategori_ekle">Yeni Kategori Ekle</string>
    <string name="kategori_sec">Kategori Seçiniz</string>
    <string name="simge">Simge</string>
    <string name="kategori_olustur">Kategori Oluştur</string>
    <string name="secili_simge">Seçili Simge</string>
    <string name="simge_sec">Simge Seç</string>
    <string name="sec">Seç</string>
    <string name="menu">Menü</string>
    <string name="kategori_basarili_eklendi">Kategori başarıyla eklendi</string>
    <string name="kategori_ad_mevcut_hata">Bu isime sahip bir kategori mevcut</string>
    <string name="silme_basarili">Silme başarılı!</string>
    <string name="guncelleme_basarili">Güncelleme başarılı!</string>
    <string name="kategori_duzenle">Kategori Düzenle</string>
    <string name="kategoriler">Kategoriler</string>
    <string name="isim_degistir">İsim Değiştir</string>
    <string name="yeni_isim">Yeni İsim</string>
    <string name="bahsis">Bahşiş</string>
    <string name="hesap_bolus">Hesapları Bölüş</string>
    <string name="hesap_miktar">Hesap Tutarı</string>
    <string name="kisi_sayisi">Kişi Sayısı</string>
    <string name="yuvarla">Yuvarla</string>
    <string name="saglik">Sağlık</string>
    <string name="hesap_miktar_toplam">Hesap miktarı %1$s</string>
    <string name="toplam_hesap">Toplam Hesap %1$s</string>
    <string name="bahsis_miktar">Bahşiş miktarı %1$s</string>
    <string name="kisi_basi_miktar">Kişi başı miktar %1$s</string>
    <string name="yuzde_sifir">%0</string>
    <string name="yuzde_otuzBes">%35</string>
    <string name="gelirGider">Gelir/Gider</string>
    <string name="bahsis_aciklama">%1$s kişi yemek harcaması.</string>

    <string name="usd_price">$%1$s</string>

    <string name="lang">en</string>
    <string name="country">US</string>

    <string-array name="tekrar_secenekler">
        <item>Her Gün</item>
        <item>Hafta içi</item>
        <item>Hafta sonları</item>
        <item>Her Hafta</item>
        <item>Her 2 Haftada Bir</item>
        <item>Her Ay</item>
        <item>Her Yıl</item>
    </string-array>



</resources>