<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_harcamaEkle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HarcamaEkle">

    <Button
        android:id="@+id/button_tarihSecHarcama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/tarih_sec"
        app:layout_constraintStart_toEndOf="@+id/editTextDate_yinelemeBitisHarcama"
        app:layout_constraintTop_toBottomOf="@+id/textView_yineleBitisHarcama" />

    <EditText
        android:id="@+id/editTextDate_yinelemeBitisHarcama"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/gg_aa_yyyy_text"
        android:inputType="date"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_yineleBitisHarcama" />

    <TextView
        android:id="@+id/textView_yineleBitisHarcama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="Yineleme Bitiş Tarihi"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_yineleHarcama" />

    <TextView
        android:id="@+id/textView_yineleHarcama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/yinele"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_duzenliMiHarcama" />

    <Spinner
        android:id="@+id/spinner_yineleHarcama"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_yineleHarcama"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_temizleHarcama"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/temizle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_ekleHarcama"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/ekle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switch_duzenliMiHarcama"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/duzenli_islem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_aciklamaHarcama" />

    <EditText
        android:id="@+id/editText_aciklamaHarcama"
        android:layout_width="280dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/aciklama"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_miktarHarcama" />

    <EditText
        android:id="@+id/editText_miktarHarcama"
        android:layout_width="280dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/miktar"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_harcamaTipi" />

    <EditText
        android:id="@+id/editText_adHarcama"
        android:layout_width="280dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ad"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_harcamaTipi"
        android:layout_width="280dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_adHarcama"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kategori"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_harcamaTipi"
        app:layout_constraintEnd_toEndOf="@+id/spinner_harcamaTipi"
        app:layout_constraintStart_toStartOf="@+id/spinner_harcamaTipi" />

</androidx.constraintlayout.widget.ConstraintLayout>