<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_bahsis"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Bahsis" >

    <TextView
        android:id="@+id/textView_yuzdeMaks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/yuzde_otuzBes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar_bahsisYuzde"
        app:layout_constraintStart_toEndOf="@+id/seekBar_bahsisYuzde"
        app:layout_constraintTop_toTopOf="@+id/seekBar_bahsisYuzde"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/textView_hesapMiktar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_bahsis"
        tools:text="Hesap miktarı ₺90,00" />

    <TextView
        android:id="@+id/textView_kisiBasiMiktar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_toplam"
        tools:text="Kişi başı miktar ₺50,00" />

    <TextView
        android:id="@+id/textView_bahsisMiktar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_hesapMiktar"
        tools:text="Bahşiş miktarı ₺10,00" />

    <SeekBar
        android:id="@+id/seekBar_bahsisYuzde"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="258dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:max="7"
        android:progress="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_kisiSayisi" />

    <EditText
        android:id="@+id/editText_bahsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/bahsis"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_bahsisYuzde" />

    <EditText
        android:id="@+id/editText_hesapMiktar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hesap_miktar"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_ekle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/ekle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_toplam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_bahsisMiktar"
        tools:text="Toplam hesap ₺100,00" />

    <TextView
        android:id="@+id/textView_yuzdeMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/yuzde_sifir"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar_bahsisYuzde"
        app:layout_constraintEnd_toStartOf="@+id/seekBar_bahsisYuzde"
        app:layout_constraintTop_toTopOf="@+id/seekBar_bahsisYuzde"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/kisi_sayisi"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_hesapMiktar" />

    <EditText
        android:id="@+id/editText_kisiSayisi"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:text="20" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_arti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:clickable="true"
        android:src="@drawable/arrow_up"
        app:backgroundTint="#8F8F8F"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/editText_kisiSayisi"
        app:layout_constraintStart_toEndOf="@+id/editText_kisiSayisi"
        app:layout_constraintTop_toTopOf="@+id/editText_kisiSayisi"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_eksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:src="@drawable/arrow_down"
        app:backgroundTint="#8F8F8F"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/editText_kisiSayisi"
        app:layout_constraintEnd_toStartOf="@+id/editText_kisiSayisi"
        app:layout_constraintTop_toTopOf="@+id/editText_kisiSayisi"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>